Mission alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,11 @@ a {
 	text-align: center;
 
 }
+
+#statement ul {
+	padding-left: 0;
+}
+
 #mission1 {
 	padding-bottom: 10px;
 }
